--- a/react-basic-app/package.json
+++ b/react-basic-app/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-basic-app",
+  "proxy": "http://localhost:8082",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,10 +13,13 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-modal": "^3.15.1",
+    "react-redux": "^8.0.2",
     "react-reveal": "^1.2.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
